--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+mangum>=0.17.0  # ASGI adapter for serverless (Vercel, AWS Lambda, etc.)
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
