--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ beautifulsoup4>=4.12.0
 lxml>=4.9.0
 selenium>=4.15.0
 webdriver-manager>=4.0.0
+playwright>=1.40.0  # Modern browser automation for LinkedIn scraping
 
 # Email verification
 dnspython>=2.4.0
