--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ pydantic-settings>=2.0.0
 
 # Database
 sqlalchemy>=2.0.0
-asyncpg>=0.29.0  # For PostgreSQL
+asyncpg>=0.29.0  # For PostgreSQL (async)
+psycopg2-binary>=2.9.0  # For PostgreSQL (sync)
 aiosqlite>=0.19.0  # For SQLite (default)
 alembic>=1.12.0
 
